Prevent x-axis scrolling on mobile

--- a/index.css
+++ b/index.css
@@ -124,6 +124,9 @@ a {
     text-decoration: none;
 }
 @media only screen and (max-width: 768px) {
+    body {
+        overflow-x: hidden;
+    }
     .containersOne {
         display: flex;
         justify-content: center;
